# molviewer

./: .gitignore  .readthedocs.yaml  README.md  example_workflow.ipynb  mypy.ini  pyproject.toml  pyvenv.cfg  requirements.txt  setup.cfg
.github/workflows/: ci-cd-pipeline.yml  ci_cd_workflow.yml  mypy-test.yml  python-package.yml  python-publish.yml
docs/: make.bat  requirements.txt
docs/source/: conf.py  examples.rst  index.rst  intro.rst  modules.rst  molviewer.rst
src/molviewer/: classes.py  errors.py  main.py  molecules.py
tests/: test_molecules.py
