[metadata]
name = molviewer
version = 0.0.13
author = Jesse Ashton
author_email = ashton.jesse@gmail.com
description = Molecular data retrieval and visualisation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ashtonjesse/molviewer
project_urls =
    Bug Tracker = https://github.com/ashtonjesse/molviewer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    chembl_webresource_client
    rdkit-pypi
    typing
    nglview
    pathlib
    requests
    flake8 
    pytest
    pytest-cov
    mypy
    pylint
python_requires = >=3.8

[options.packages.find]
where = src